# Project

./: Administrative Districts_Cities-Provinces__Employment by Working Hours.csv  Administrative Districts_Cities_and_Provinces__Employed by Age.csv  Employed Persons by Gender and Age.csv  Employed by Gender and Industry.csv  Employed people by employment status.csv  number of businesses.csv  pyproject.toml  requirements.txt  streamlit_app.py  youth_population.csv  행정구역_시도__취업시간별_취업자_20260622021330.csv
