[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.14"
name = "my-project"
version = "0.1.0"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "matplotlib",
    "folium",
    "streamlit-folium",
]
[tool.uv]
package = false
